2007-11-29  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/apps/index.xml:
	* src/htdocs/bindings/bindings.xsl:
	* src/htdocs/lists/index.xml:
	* src/htdocs/modules/modules.xsl:
	  Add headings for those pages.

2007-11-29  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* TODO:
	* src/copy/gstreamer.css:
	* src/htdocs/dev/index.xml:
	* src/htdocs/header.xml:
	* src/htdocs/header.xsl:
	* src/htdocs/index.xsl:
	* src/htdocs/news/news.xsl:
	* src/htdocs/page.xsl:
	  New left-side navigation. Some links have been commented out
	  (FAQ, Tasks, Modules, Bindings). They are alreay accesible from the
	  subpages and the tasks are outdated. The remaining links have been
	  visually grouped. Table-layout on the front-page has been fixed. Irc
	  link on devel page reworded and modules linked from the page.

2007-11-28  Edward Hervey  <bilboed@bilboed.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-python/0.10.9.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	Release 0.10.9 of gst-python.

2007-11-16  Jan Schmidt <jan.schmidt at sun dot com>

	Release 0.10.15 of gstreamer and gst-plugins-base.

2007-09-24  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xsl:
	  Add some more useful links.

2007-09-19  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Update milestones in bug list.

2007-08-08  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gnonlin/0.10.9.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	Release 0.10.9 of GNonLin.

2007-08-03  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.14.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.14.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	Release 0.10.14 of Core & Base.
