@@ -1,7 +1,7 @@
 <!ENTITY gst-version-stable "0.10.15">
 <!ENTITY gst-plugins-version-stable "0.8.12">
 
-<!ENTITY gst-ffmpeg-version-stable "0.10.2">
+<!ENTITY gst-ffmpeg-version-stable "0.10.3">
 <!ENTITY gst-python-version-stable "0.10.9">
 <!ENTITY gst-plugins-base-version-stable "0.10.15">
 <!ENTITY gst-plugins-good-version-stable "0.10.6">
