@@ -1,0 +1,203 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-ffmpeg</module>
+  <module-fancy>GStreamer FFmpeg Plug-ins</module-fancy>
+  <name>My T-Shirt is slowly fading</name>
+  <version>0.10.3</version>
+
+  <intro>
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+GStreamer FFmpeg Plug-ins.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+<p>
+This module contains plug-ins using libraries from the FFmpeg project.
+</p>
+
+<p>
+Other modules containing plug-ins are:
+
+<dl>
+<dt>gst-plugins-base</dt>
+<dd>contains a basic set of well-supported plug-ins</dd>
+<dt>gst-plugins-ugly</dt>
+<dd>contains a set of well-supported plug-ins, but might pose problems for
+    distributors</dd>
+<dt>gst-plugins-bad</dt>
+<dd>contains a set of less supported plug-ins that haven't passed the
+    rigorous quality testing we expect</dd>
+</dl>
+
+</p>
+  </intro>
+
+  <features>
+    <feature>Memory usage fixes</feature>
+    <feature>Playback and seeking fixes</feature>
+    <feature>Improved QOS support</feature>
+    <feature>Parallel installability with 0.8.x series</feature>
+    <feature>Threadsafe design and API</feature>
+  </features>
+
+  <applications>
+  </applications>
+
+    <contributors>
+	<person></person>
+	<person>Edward Hervey</person>
+	<person>Jan Arne Petersen</person>
+	<person>Jan Schmidt</person>
+	<person>Johan Dahlin</person>
+	<person>Josselin Mouette</person>
+	<person>Julien Moutte</person>
+	<person>Laurent Glayal</person>
+	<person>Mark Nauwelaerts</person>
+	<person>Martin Szulecki</person>
+	<person>Michael Smith</person>
+	<person>Ole André Vadla Ravnås</person>
+	<person>Sebastian Dröge</person>
+	<person>Stefan Kost</person>
+	<person>Sébastien Moutte</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Tuomas Kulve</person>
+	<person>Wim Taymans</person>
+	<person>Yann Gilquin</person>
+	<person>Yves Lefebvre</person>
+  </contributors>
+
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <deprecations>
+    </deprecations>
+  </api>
+-->
+
+  
+
+  <bugs>
+    <bug>
+      <id>474845</id>
+      <summary>ffmux_mp4 does not encode metadata</summary>
+    </bug>
+    <bug>
+      <id>433245</id>
+      <summary>Non-mutex-protected calls to avcodec_open/_close</summary>
+    </bug>
+    <bug>
+      <id>153263</id>
+      <summary>no decoder available for real proprietary codecs</summary>
+    </bug>
+    <bug>
+      <id>334990</id>
+      <summary>Crash with a .rm file</summary>
+    </bug>
+    <bug>
+      <id>341736</id>
+      <summary>[patch] H.263/QDesign Music v.2 movie has great playback ...</summary>
+    </bug>
+    <bug>
+      <id>342962</id>
+      <summary>[ffdec_h264] jerky playback of h264 in matroska and quick...</summary>
+    </bug>
+    <bug>
+      <id>363363</id>
+      <summary>Please permit building against an external ffmpeg</summary>
+    </bug>
+    <bug>
+      <id>364139</id>
+      <summary>[ffdec_h264] regression: artefacts with 'climates' quickt...</summary>
+    </bug>
+    <bug>
+      <id>375534</id>
+      <summary>FLV demuxer produces bad framerate, durations</summary>
+    </bug>
+    <bug>
+      <id>392359</id>
+      <summary>[ffmpegenc] potential crash in dispose due to double-free</summary>
+    </bug>
+    <bug>
+      <id>393187</id>
+      <summary>ffenc_mpeg4 does not set codec_data on caps</summary>
+    </bug>
+    <bug>
+      <id>394075</id>
+      <summary>ffdemux disregards FlowReturn result of downstream pushing</summary>
+    </bug>
+    <bug>
+      <id>403168</id>
+      <summary>[ffmux_flv] crash on buffer after returning FLOW_ERROR pr...</summary>
+    </bug>
+    <bug>
+      <id>403739</id>
+      <summary>ffenc_mpeg1/2video segfaults</summary>
+    </bug>
+    <bug>
+      <id>407779</id>
+      <summary>Add more explanations when building against external ffmpeg</summary>
+    </bug>
+    <bug>
+      <id>435742</id>
+      <summary>gst-ffmpeg installation fails during make</summary>
+    </bug>
+    <bug>
+      <id>440253</id>
+      <summary>no shared lib created and installed (MinGW)</summary>
+    </bug>
+    <bug>
+      <id>453135</id>
+      <summary>broken ffenc_*</summary>
+    </bug>
+    <bug>
+      <id>460274</id>
+      <summary>FFmpeg buffer duration issues</summary>
+    </bug>
+    <bug>
+      <id>466221</id>
+      <summary>Doesn't play &quot; video/sp5x &quot; videos</summary>
+    </bug>
+    <bug>
+      <id>485033</id>
+      <summary>Wrong return type for gst_ffmpegdec_setcaps</summary>
+    </bug>
+    <bug>
+      <id>492419</id>
+      <summary>Build issues on Windows/MSVC</summary>
+    </bug>
+    <bug>
+      <id>398875</id>
+      <summary>[ffdec_camtasia] requires &quot; bits_per_sample &quot; to be set or ...</summary>
+    </bug>
+    <bug>
+      <id>394071</id>
+      <summary>ffmpeg now uses YUV4MPEG version 2, caps still indicate v...</summary>
+    </bug>
+    <bug>
+      <id>399108</id>
+      <summary>ffmpeg's yuv4mpegpipe demuxer not activated for auto-plug...</summary>
+    </bug>
+    <bug>
+      <id>444332</id>
+      <summary>missing unref for videoscale after gst_pad_get_parent</summary>
+    </bug>
+    <bug>
+      <id>444384</id>
+      <summary>ffmux_asf could support more input capabilities</summary>
+    </bug>
+    <bug>
+      <id>482946</id>
+      <summary>warning in demuxer when receiving GST_EVENT_LATENCY</summary>
+    </bug>
+  </bugs>
+
+</release>
